fix profile image on small screens

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 576px){   
-    img {
+    .icons img {
         height: 40px;
         width: 40px;
     }    
